11-eks/k8s-eks/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clearops-frontend
  namespace: clearops
  labels:
    app: clearops-frontend
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clearops-frontend
  template:
    metadata:
      labels:
        app: clearops-frontend
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: 948102249482.dkr.ecr.us-east-1.amazonaws.com/clearops-frontend:1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
