11-eks/k8s-eks/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clearops-frontend
  namespace: clearops
spec:
  type: ClusterIP
  selector:
    app: clearops-frontend
  ports:
    - port: 80
      targetPort: 80
